[package]
name = "storytree-native"
version = "0.0.0"
edition = "2021"

[dependencies]
ico = "0.3.0"
simple_logger = "4.3.3"
uuid = { version = "1.5.0", features = ["v4"] }
winit = "0.29.10"

[target.'cfg(windows)'.dependencies]
ico = "0.3.0"

# See about switching to windows-sys
[target.'cfg(windows)'.dependencies.windows]
version = "0.52.0"
features = [
  "Foundation",
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug",
  "Win32_Graphics_Dwm",
  "Win32_System_Registry",
  "UI_ViewManagement",
  "Win32_UI_Controls",
  "Win32_UI_Shell",
  "Win32_System_Com",
  "Win32_UI_Shell_Common",
  "Win32_UI_Controls_Dialogs",
]

[features]
hide-console = []
